fix: search z-index

--- a/app/assets/scss/content.scss
+++ b/app/assets/scss/content.scss
@@ -137,7 +137,7 @@
 .toc--sidebar {
   align-self: flex-start;
   position: sticky;
-  z-index: 10;
+  z-index: 1;
 
   @media (max-width: $layout-tablet) {
     box-shadow: 0 2px 8px 0 rgba(44, 44, 44, 0.16);
